test/error/sema/struct-field-default-type-mismatch.dsk
let S = struct
    x: int = "hello"
end

let s = S()
